--- a/PreprocessData.ipynb
+++ b/PreprocessData.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "e501560f-da90-4ba9-bc9d-8c4684cd76fd",
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\gensim\\similarities\\__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import tensorflow as tf\n",
@@ -34,8 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "82b8a51a-3cc6-4bd3-b55a-c7f18cfce0c7",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6da2a9ae-d17d-403d-8d74-6778c6aece4c",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2bcd13b7-0843-4b32-ad1a-b160ac329811",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3bdfc756-2ac8-49e5-8d79-f3c7387ba9a2",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5cda9969-ca0d-43a6-9f89-1342dcde9332",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "bc9cf7e8-aeb0-4998-b220-4ed427c348e0",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_stop_words(text):\n",
     "    # Prepare set of stopwords\n",
     "    stop_words = set(stopwords.words('english'))\n",
-    "    stop_words.remove('Not')\n",
+    "    # Not not found on win10, returns Key Error\n",
+    "#     stop_words.remove('Not')\n",
     "\n",
     "    # Remove stopwords from the text\n",
     "    filtered_text = [word for word in text.split() if not word in stop_words]\n",
@@ -151,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2f7a94e9-484f-468d-9576-2f1a35aa86bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,31 +189,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2b76cd1-e239-460d-afc8-117376c6d559",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-9c3bebceab38>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['text'] = data['text'].apply(lambda x: replace_with_space(x)).copy()\n",
-      "<ipython-input-9-9c3bebceab38>:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['text'] = data['text'].apply(lambda x: remove_stop_words(x))\n"
+      "Wall time: 6min 50s\n"
      ]
     }
    ],
    "source": [
-    "data1 = first_data_prep()\n",
-    "data = stratified_split(data1, 0.1)\n",
+    "%%time\n",
+    "data = first_data_prep()\n",
     "# Apply replace func that replace chars with spaces\n",
     "data['text'] = data['text'].apply(lambda x: replace_with_space(x)).copy()\n",
     "# Apply func that removes stop words\n",
@@ -220,11 +210,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0b4e9805-4e45-4718-97bd-8480b90c108f",
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 27.1 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
+    "tok = tf.keras.preprocessing.text.Tokenizer()\n",
+    "# Updates internal vocabulary based on a list of texts \n",
+    "tok.fit_on_texts(list(data['text']))\n",
+    "# Transforms each text in texts to a sequence of integers.\n",
+    "seq = tok.texts_to_sequences(list(data['text']))\n",
+    "# Pad sequences to make them same lenght \n",
+    "tf_ready = tf.keras.preprocessing.sequence.pad_sequences(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4.51 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "w2v_model = gensim.models.word2vec.Word2Vec(vector_size=W2V_SIZE, \n",
     "                                            window=W2V_WINDOW, \n",
     "                                            min_count=W2V_MIN_COUNT, \n",
@@ -236,19 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e00fa934-b6fb-40e1-8d57-50eb98268783",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocab size 147682\n"
+      "Vocab size 739298\n",
+      "Wall time: 0 ns\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "words = w2v_model.wv.index_to_key\n",
     "vocab_size = len(tok.word_index) + 1\n",
     "print(\"Vocab size\", vocab_size)"
@@ -256,55 +279,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5ed6087b-3742-4281-aa3b-6857d91518f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(32087341, 41551488)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w2v_model.train(documents, total_examples=len(documents), epochs=W2V_EPOCH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "427cb6db-41c4-412f-bade-a158536ce919",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tok = tf.keras.preprocessing.text.Tokenizer(num_words=100000)\n",
-    "# Updates internal vocabulary based on a list of texts \n",
-    "tok.fit_on_texts(list(data['text']))\n",
-    "# Transforms each text in texts to a sequence of integers.\n",
-    "seq = tok.texts_to_sequences(list(data['text']))\n",
-    "# Pad sequences to make them same lenght \n",
-    "tf_ready = tf.keras.preprocessing.sequence.pad_sequences(seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "38a09d4c-33f1-40af-90fb-92fda1b2dc3d",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(147682, 300)\n"
+      "Wall time: 5min 7s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(355796583, 415799456)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "%%time\n",
+    "w2v_model.train(documents, total_examples=len(documents), epochs=W2V_EPOCH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "embedding_matrix = np.zeros((vocab_size, W2V_SIZE))\n",
     "for word, i in tok.word_index.items():\n",
@@ -315,19 +320,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b3465d0-75c6-4d89-b009-152411685208",
-   "metadata": {},
-   "source": [
-    "data = first_data_prep()\n",
-    "split_data= stratified_split(data, 0.1)\n",
-    "tf_ready, tok = tokenize(split_data, 10000, 15)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "19f6f475-754a-4a5d-befa-afe190c7ca6c",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,18 +332,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "9231c5e3-8e3a-4d12-82cc-77a522af74d3",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-4e8f90234d2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m                 \u001b[0mloss\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'binary_crossentropy'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m                  \u001b[0mkernel_initializer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'lecun_normal'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m                  \u001b[0mkernel_regularizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mregularizers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mL2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.01\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m                 ):\n\u001b[0;32m     10\u001b[0m     \"\"\" Layers argument shape:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def configure_cnn(data,\n",
     "                embedding,\n",
     "                layers=None, \n",
     "                dropout_rate=0,\n",
-    "                kernel_size=10,\n",
-    "                stride=10,\n",
-    "                pool_size=2,\n",
     "                optimizer='Adam',\n",
     "                loss='binary_crossentropy',\n",
     "                 kernel_initializer='lecun_normal',\n",
@@ -392,8 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "a7c6a7a4-0408-43f8-a578-f64a7596ef81",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +402,6 @@
     "                embedding,\n",
     "                layers=None, \n",
     "                dropout_rate=0,\n",
-    "                kernel_size=10,\n",
-    "                stride=10,\n",
-    "                pool_size=2,\n",
     "                optimizer='Adam',\n",
     "                loss='binary_crossentropy',\n",
     "                 kernel_initializer='lecun_normal',\n",
@@ -437,19 +435,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "9a2dc25a-9ada-4e71-81f9-f0a95d56de7f",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'configure_cnn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-0d1283cf5a14>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfigure_cnn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0membedding_layer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# model_rnn = configure_rnn(tf_df, embedding_layer)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'configure_cnn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = configure_cnn(tf_df, embedding_layer)\n",
-    "model_rnn = configure_rnn(tf_df, embedding_layer)"
+    "# model_rnn = configure_rnn(tf_df, embedding_layer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c2648268-6ef0-42bd-b48d-e46301c18b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,8 +468,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 8088951385268926044\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.client import device_lib\n",
+    "print(device_lib.list_local_devices())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
-   "id": "d4fc0a88-9209-4c53-b872-6f80843ded3a",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +537,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "434b941d-575a-4cfe-be12-27df523677c3",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "04965c36-95a7-46fd-a9cb-49d354337080",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +618,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c7dd931c-24e8-429f-9bb8-24554e091f67",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +638,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "78053a6b-8142-4091-8562-019c4279c695",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +658,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd00c7d-54f2-4c45-8e06-daeb4de9a4cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -653,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
